2010-09-04 mmichaud <michael.michaud@free.fr>
    * replaced peppe's OJ.exe file by a OpenJUMP.exe + OpenJUMP.ini file
      created with WinRun4J free software (http://winrun4j.sourceforge.net/)
      warning : I deactivated VERSION filter in "dist" target of build file,
      because it did corrupt the .exe file (and seemed unused)

2010-09-04 mmichaud <michael.michaud@free.fr>
    * fixed a NPE in ShapefileReader arising with shapefiles without dbf
    
2010-09-03 Matthias Scholz <ms@jammerhund.de>
	* com.vividsolutions.jump.io.ShapefileReader
		* read() fix for loading a Shapefile from a project or with the legacy "Load Dataset" method
		  in both cases the default CharSet is used

2010-09-03 Matthias Scholz <ms@jammerhund.de>
	* Possibility to select a charset for opening a ESRI Shape file (String attributes)
	* language/jump_de.properties, language/jump_en.properties
		* added key org.openjump.core.ui.plugin.file.charset
	* org.openjump.OpenJumpConfiguration
		* loadOpenJumpPlugIns() added Field Component Factory for "CharSetComboBoxField"
		* postExtensionInitialization() added FileLoader option for shape files
	* com.vividsolutions.jump.io.ShapefileReader
		* read() added charset setting for DbfFile (mydbf)
	* org.geotools.dbffile.DbfFile
		* added private variable charset and getter/setter methods
		* ParseRecordColumn(byte[] rec, int wantedCol) changed for creating returning String column with Charset
	* org.openjump.core.ui.plugin.file.open.OpenFileWizardState
		* getNextPanel() fixed wrong String comparison

2010-09-03 Matthias Scholz <ms@jammerhund.de>
	* Patch for selectionstyling
	* added org.openjump.core.ui.SelectionStyllingOptionsPanel class
	* com.vividsolutions.jump.workbench.ui.plugin.initialize()
		* SelectionStyllingOptionsPanel added
	* com.vividsolutions.jump.workbench.ui.renderer.AbstractSelectionRenderer
		* AbstractSelectionRenderer() changed
		* paint(Geometry geometry, Graphics2D g, Viewport viewport) changed